--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMT Agro - Agricultural Machinery</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9LVFKB3GD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-T9LVFKB3GD');
+  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5537134897652121"
+    crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="459592006-1563505474245474-115921968129051922-n-removebg-preview.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BMT Agro - Agricultural Machinery</title>
+  <meta name="description" content="A video chat platform where you can meet new people and have fun conversations." />
+  <link rel="stylesheet" href="style.css">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="AJ">
+  <meta property="og:url" content="https://httpaju.github.io/TALK-TO-STRANGER/">
+  <meta property="og:image" content="https://i.ibb.co/mqYnHpS/459592006-1563505474245474-115921968129051922-n-removebg-preview.png">
+  <meta property="og:description" content="BMT TEST WEBSITE"> 
+    
     <style>
         body {
             font-family: Arial, sans-serif;
