--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="style.css">
   <meta property="og:type" content="website">
   <meta property="og:title" content="AJ">
-  <meta property="og:url" content="https://httpaju.github.io/TALK-TO-STRANGER/">
+  <meta property="og:url" content="https://httpaju.github.io/bmt-test/">
   <meta property="og:image" content="https://i.ibb.co/mqYnHpS/459592006-1563505474245474-115921968129051922-n-removebg-preview.png">
   <meta property="og:description" content="BMT TEST WEBSITE"> 
     
